Fix pixel perfect for advantages block for index page on mobile

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -3,7 +3,7 @@
   line-height: 60px;
   font-weight: 400;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 28px;
 
   @include md-size {
     font-size: 60px;
@@ -29,7 +29,7 @@
 }
 
 .advantages__item {
-  margin-bottom: 30px;
+  margin-bottom: 21px;
   padding-bottom: 5px;
   padding-left: 80px;
   position: relative;
